objects/Instructor__c.object
<CustomObject>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>A-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Instructor_Email__c</fullName>
        <label>Instructor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Instructor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CS_Instructors</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
            <value>Computer Science</value>
        </filters>
        <label>CS Instructors</label>
    </listViews>
    <listViews>
        <fullName>English_Instructors</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
            <value>English</value>
        </filters>
        <label>English Instructors</label>
    </listViews>
    <listViews>
        <fullName>Science_ListView</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
            <value>Science</value>
        </filters>
        <label>Science ListView</label>
    </listViews>
    <nameField>
        <label>Instructor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <recordTypes>
        <fullName>Instructor_RecordType</fullName>
        <active>true</active>
        <label>Instructor RecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SubjectisMandatory</fullName>
        <active>true</active>
        <description>Subject is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT( Subject__c ))</errorConditionFormula>
        <errorDisplayField>Subject__c</errorDisplayField>
        <errorMessage>Please provide the subject.</errorMessage>
    </validationRules>
</CustomObject>